# TransferX

./: CHANGELOG.md  FEATURES.md  INSTALL.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  admin.py  app.py  auth.py  config.py  email_service.py  env.py  extensions.py  models.py  notifications.py  pyproject.toml  requirements.txt  routes.py
static/css/: admin.css  auth.css  dashboard.css  email.css  style.css
static/js/: admin.js  animations.js  auth.js  email.js  main.js  notifications.js  preview.js  upload.js
templates/: base.html  error.html  pages.html
templates/admin/: activity_logs.html  admin_base.html  attachments.html  dashboard.html  emails.html  forgot_password.html  login.html  register.html  reset_password.html  storage.html  users.html
templates/auth/: verify_2fa.html  verify_email.html
templates/dashboard/: admin.html  admin_base.html  admin_emails.html  admin_users.html  compose.html  dashboard.html  draft_details.html  drafts.html  email_details.html  notifications_page.html  profile.html  sent.html
templates/emails/: email_sent.html  password_changed.html  reset_password.html  two_factor_otp.html  verify_email.html  welcome.html
templates/public/: email_view.html
