[project]
name = "transferx"
version = "1.0.0"
description = "A modern Flask-based email and file sharing platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-Login==0.6.2",
    "Flask-Mail==0.9.1",
    "Flask-WTF==1.1.1",
    "python-dotenv==1.0.0",
    "itsdangerous==2.1.2",
    "Werkzeug==2.3.7",
    "email-validator==2.1.0",
    "Pillow==10.1.0",
    "pyotp==2.9.0",
    "qrcode==7.4.2",
]

[tool.vercel]
entrypoint = "app:app"

[tool.uv]
package = true
